--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,10 @@ main {
 }
 
 main img {
-  /* width: 300px; */
+  width: 300px;
   height: 160px;
   object-fit: contain;
   margin-top: 30px;
   border: 1px solid black;
+  overflow: hidden;
 }
