--- a/src/App.css
+++ b/src/App.css
@@ -7,35 +7,32 @@ body {
 }
 
 .logo {
-  width: 160px;
-  margin-left: 13px;
-  margin-top: 30px;
+  width: 140px;
+  margin-left: 15px;
+  margin-top: 20px;
 }
 
-h1 {
+.category-title {
   font-size: 20px;
   color: white;
   font-weight: bold;
   margin-top: 35px;
 }
 main {
-  margin-top: 50px;
   margin-left: 40px;
   margin-bottom: 100px;
 }
 
-main img {
-  width: 300px;
-  height: 160px;
+.movie-images {
+  width: 220px;
+  height: 120px;
   object-fit: contain;
-  margin-top: 30px;
-  border: 1px solid black;
+  margin-top: 20px;
 }
 
 .image-block {
   display: flex;
   overflow-x: scroll;
-
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
